Ensure spell checking is enabled in SpellCheckerTest

This patch introduces SpellCheckTestBase, which sets up a non-empty
SpellCheckerClient that enables spell checking, so that
SpellCheckerTest can utilize this base class to correctly perform
unit tests that requires spell checking to be enabled.

The new base class will also be useful when adding unit test for
idle time spell checker.

This patch also removes spell checking related stuff from
TextFormControlElementTest, since it is leftover after we previously
moved a spell checking unit test from TextFromControlElementTest to
SpellCheckerTest.

BUG=695286

Review-Url: https://codereview.chromium.org/2711053002
Cr-Commit-Position: refs/heads/master@{#452427}

Former-commit-id: 5a9a2764673ac595836bb6cc67237ae60c3aa0bf